[gd_scene load_steps=2 format=3 uid="uid://cxlv8frg7bb5j"]

[ext_resource type="Script" path="res://scripts/main_menu/settings.gd" id="1_3x5n5"]

[node name="Settings" type="MarginContainer"]
z_index = 3
offset_left = 320.0
offset_top = 64.0
offset_right = 640.0
offset_bottom = 256.0
script = ExtResource("1_3x5n5")

[node name="Panel" type="Panel" parent="."]
z_index = -1
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2

[node name="General" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2

[node name="display_percentage" type="CheckButton" parent="TabContainer/General"]
layout_mode = 2
text = "Display Percentage"

[node name="debug" type="CheckButton" parent="TabContainer/General"]
layout_mode = 2
text = "Debug"

[connection signal="toggled" from="TabContainer/General/display_percentage" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="TabContainer/General/debug" to="." method="_on_debug_toggled"]
